force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/BusinessRulesSetting__c/BusinessRulesSetting__c.object-meta.xml
<CustomObject>
    <label>BusinessRulesSetting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BusinessRulesSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>