force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/BusinessRulesSetting__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>250</length>
    <type>Text</type>
</CustomField>