force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/BusinessRulesSetting__c/fields/RuleKey__c.field-meta.xml
<CustomField>
    <fullName>RuleKey__c</fullName>
    <label>RuleKey</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>