force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/BusinessRulesSetting__c/fields/StatusWhenRulesAreCompleted__c.field-meta.xml
<CustomField>
    <fullName>StatusWhenRulesAreCompleted__c</fullName>
    <description>Campo para a escolha de algum status que será utilizado para atualizar o objeto alvo após a conclusao das regras, caso nao deseja mudança de status, deixar o campo vázio.</description>
    <inlineHelpText>Campo para a escolha de algum status que será utilizado para atualizar o objeto alvo após a conclusao das regras, caso nao deseja mudança de status, deixar o campo vázio.</inlineHelpText>
    <label>Status ao Completar as Regras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>