force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/BusinessRulesSetting__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>RuleKey__c</columns>
    <columns>isActivated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>